<resources>
    <string name="app_name" translatable="false">Child Module</string>
    <string name="no_unique_id">No unique ids found. Click on the sync button to get more and if this error persists contact the system admin.</string>
    <string name="error_unable_to_start_form">An error occurred when starting the form.</string>
    <string name="no_matching_record_found_on_this_device">No matching record found on this device.</string>
    <string name="add_member">Add Member</string>
    <string name="sort">Sort</string>
    <string name="home">Home</string>
    <string name="add_child">Add Child</string>
    <string name="job_aids">Job Aids</string>
    <string name="any_changes_you_make">Any changes you have made will be lost.</string>
    <string name="invalid_device_date">Device current datetime must be after last synced server datetime which was </string>
    <string name="home_women_label">Woman</string>
    <string name="home_field_monitor_label">Stock</string>
    <string name="child_entries">Child</string>
    <string name="child_profile">CHILD </string>
    <string name="child_DOB">Date Of Birth</string>
    <string name="child_reminder">REMINDER</string>
    <string name="child_next_vaccine">VACCINE STATUS</string>
    <string name="child_register_title">Child Register</string>
    <string name="register_search_hint">Search</string>
    <string name="child_title">Child</string>
    <string name="child_alphabetical_sort">Alphabetical (Child Name)</string>
    <string name="child_id_sort">Program ID </string>
    <string name="child_search_hint">Search Child</string>
    <string name="child_details_title"> Child Details</string>
    <string name="stock_title"> Stock Control</string>
    <string name="vaccination_summary"> Vaccination Summary</string>
    <string name="search_hint">Search Register</string>
    <string name="birthdate">DOB</string>
    <string name="age">Age</string>
    <string name="town">Town</string>
    <string name="address">Address</string>
    <string name="birthdate_age">AGE</string>
    <string name="epi_number">ID</string>
    <string name="child_contact_number">WEIGHT</string>
    <string name="marital_status">Marital Status</string>
    <string name="woman_entries"></string>
    <string name="woman_register_title">Woman Register</string>
    <string name="str_woman_search_hint">Search Woman Register</string>
    <string name="woman_profile">WOMAN PROFILE</string>
    <string name="woman_title">Woman</string>
    <string name="woman_contact_number">CONTACT</string>
    <string name="woman_last_vaccine">LAST VACCINE</string>
    <string name="woman_next_vaacine">NEXT VACCINE DUE</string>
    <string name="woman_alphabetical_sort">Alphabetical (Name)</string>
    <string name="id_sort">System ID </string>
    <string name="woman_details_title">Woman Profile</string>
    <string name="day">DAY\n</string>
    <string name="bcg">BCG\n</string>
    <string name="opv">OPV\n</string>
    <string name="ipv">IPV\n</string>
    <string name="penta">PENTA\n</string>
    <string name="measles">MEASLES\n</string>
    <string name="pcv">PCV\n</string>
    <string name="tt">TT\n</string>
    <string name="total">TOTAL\n</string>
    <string name="used">USED</string>
    <string name="wasted">WASTED</string>
    <string name="month">MONTH</string>
    <string name="month_target">MONTHLY TARGET</string>
    <string name="month_received">STOCK RECEIVED</string>
    <string name="month_used">STOCK USED</string>
    <string name="month_wasted">STOCK WASTED</string>
    <string name="month_inhand">BALANCE IN HAND</string>
    <string name="stock_register_title">Stock Register</string>
    <string name="stock_register_monthly_view">Monthly</string>
    <string name="stock_register_daily_view">Daily</string>
    <string name="field_entries">Stock Register</string>
    <string name="field_title">Stock Register</string>
    <string name="str_field_search_hint">Search Register</string>
    <string name="pick_report">Report</string>
    <string name="field_details_title">Stock Position</string>
    <string name="title_activity_vaccine_report">VaccineReport</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="userNameText">User Name</string>
    <string name="passwordText">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="undo">Undo</string>
    <string name="unauthorized">Please check the credentials.</string>
    <string name="unauthorized_group">Your user group is not allowed to access this device.</string>
    <string name="unknown_response">Login failed. Please try again later.</string>
    <string name="no_internet_connectivity">No internet connection. Please ensure data connectivity.</string>
    <string name="form_saved_dialog_title">Form Submission</string>
    <string name="form_saved_success_dialog_message">Form saved successfully!</string>
    <string name="form_saved_failed_dialog_message">Form saving encountered an error. </string>
    <string name="ok_button_label">OK</string>
    <string name="forminputerror">Please check the form for any error/missing input marked in red.</string>
    <string name="okforminputerror">ok</string>
    <string name="child_followup">Child Follow Up</string>
    <string name="woman_followup">Woman Follow Up</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="global_search_hint">Search Globally</string>
    <string name="global_search">Global Search</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="child_siblings">%s siblings</string>
    <string name="female_sex_id">her</string>
    <string name="male_sex_id">his</string>
    <string name="label_zeir">ID</string>
    <string name="label_immunization_records">IMMUNISATION &amp; SERVICES</string>
    <string name="str_search_hint">Search Name or ID</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="zeir">ID</string>
    <string name="select_location">Select Location</string>
    <string name="no_openmrs_id">No unique ids found. Click on the sync button to get more and if this error persists contact the system admin.</string>
    <string name="edit_registration_data">Edit Registration Data</string>
    <string name="edit_immunization_data">Edit Immunisation Data</string>
    <string name="edit_recurring_services_data">Edit Recurring Services Data</string>
    <string name="record_bcg_2">Record BCG 2 (if no scar)</string>
    <string name="mark_inactive">Mark Inactive</string>
    <string name="mark_active">Mark Active</string>
    <string name="mark_as_lost_to_followup">Mark as Lost to Follow-Up</string>
    <string name="mark_as_not_lost_to_followup">Mark as Not Lost to Follow-Up</string>
    <string name="report_deceased">Report Deceased</string>
    <string name="report_adverse_event">Report Adverse Event</string>
    <string name="syncing">Syncing...</string>
    <string name="sync_failed">Sync Failed</string>
    <string name="retry">Retry</string>
    <string name="sync_complete">Sync Complete</string>
    <string name="sync_">Sync%1$s</string>
    <string name="last_sync">(last %1$s)</string>
    <string name="now">now</string>
    <string name="ic_health_facility">&#xe0b9;</string>
    <string name="ic_zone">&#xe052;</string>
    <string name="service_location">Service Location</string>
    <string name="ic_check">&#xe038;</string>
    <string name="no_record">No Record(s) Found!</string>
    <string name="overdue_due">Overdue/Due (%1$s)</string>
    <string name="saving_dialog_title">Saving…</string>
    <string name="updating_dialog_title">Updating…</string>
    <string name="please_wait_message">Please Wait</string>
    <string name="saving_dialog_message">Please Wait</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="out_and_inside">Outside and Inside\nMy Catchment Area</string>
    <string name="requires_internet_connection">(Requires Internet Connection)</string>
    <string name="my_catchment_area">My Catchment Area Only</string>
    <string name="search_limits">Search Limits</string>
    <string name="client_status">Client Status</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="lost_to_follow_up">Lost to Follow-Up</string>
    <string name="lost_to_follow_up_with_nl">Lost to\nFollow-Up</string>
    <string name="status">Status</string>
    <string name="opensrp_id">System ID</string>
    <string name="iz_id_hint">System ID</string>
    <string name="card_id_hint">Card ID</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="mother_guardian_name">Mother/Guardian Name</string>
    <string name="mother_guardian_name_hint">Mother/Guardian Name</string>
    <string name="mother_guardian_first_name_hint">Mother/Guardian First Name</string>
    <string name="mother_guardian_last_name_hint">Mother/Guardian Last Name</string>
    <string name="mother_guardian_nrc">Mother/Guardian NRC</string>
    <string name="mother_guardian_nrc_hint">Mother/Guardian NRC Number</string>
    <string name="mother_guardian_phone_number">Mother/Guardian Phone Number</string>
    <string name="mother_guardian_phone_number_hint">Mother/Guardian Phone Number</string>
    <string name="date_birth_range">Date Of Birth Range</string>
    <string name="start_date_hint">Select Start Date</string>
    <string name="end_date_hint">Select End Date</string>
    <string name="update_search_params">Please update at least one search parameter.</string>
    <string name="no_vaccine_record_found">No vaccination record found.</string>
    <string name="matching_results">%1$s matching results found.</string>
    <string name="check_child_bcg_scar">"Check for child's BCG scar"</string>
    <string name="move_to_catchment_confirm_dialog_title">Confirm Move</string>
    <string name="move_to_catchment_confirm_dialog_title_">Confirm Move (%1$s)</string>
    <string name="move_to_catchment_confirm_dialog_message">Are you sure you want to move this record to your catchment area?</string>
    <string name="move_to_catchment_success_message">The record has been moved to your catchment area</string>
    <string name="mother_lookup_results">Matching Records</string>
    <string name="dismiss">Dismiss</string>
    <string name="change_status">Change Status</string>
    <string name="register_biometrics">Register Biometrics</string>
    <string name="write_passcode">Write Passcode</string>
    <string name="read_from_card">Read Card</string>
    <string name="write_to_card">Write to Card</string>
    <string name="register_card">Register Card</string>
    <string name="scan_card">Scan Card</string>
    <string name="child_status">Child Status</string>
    <string name="notifications_on">Notifications On.</string>
    <string name="notifications_off">Notifications Off. Child away for a period of time.</string>
    <string name="notifications_off_child_cannot_be_located">Notifications Off. Child cannot be located or contacted.</string>
    <string name="record_dynamic_vaccines">Record Private Sector Vaccines</string>
    <string name="report_lost_card">Report Lost or Damaged Card</string>
    <string name="report_lost_dialog_title">Report lost or damaged card?</string>
    <string name="report_lost_card_dialog_message">Report the child card as lost or damaged. A new card will be ordered for the child</string>
    <string name="collect_biometrics">Biometrics</string>
</resources>