<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@mipmap/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_scan_qr"
        android:enabled="true"
        android:icon="@mipmap/ic_scan_qr"
        android:title="@string/scan_qr_code"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_scan_card"
        android:enabled="true"
        android:icon="@mipmap/ic_card"
        android:title="@string/scan_card"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_biometric"
        android:enabled="true"
        android:icon="@drawable/ic_biometric"
        android:title="@string/collect_biometrics"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_icon_search"
        android:title="@string/search_menu"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_register"
        android:enabled="true"
        android:icon="@drawable/ic_tabmenu_addchild"
        android:title="@string/add_child"
        app:showAsAction="ifRoom" />
</menu>
