<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/transparent"
    android:filterTouchesWhenObscured="true"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_shape">

        <FrameLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:background="@color/white">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/child_name"
                    style="@style/CustomFontTextViewStyle.ClientList.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:password="false"
                    android:text="@string/child_status"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/activelayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/active_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_checked" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/child_active"
                            style="@style/CustomFontTextViewStyle.ClientList.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:password="false"
                            android:text="@string/active"
                            android:textColor="@color/black"
                            android:textSize="22sp" />

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/active_description"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notifications_on"
                            android:textColor="@color/client_list_grey"
                            android:textSize="22sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/inactivelayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/inactive_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_checked" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/child_inactive"
                            style="@style/CustomFontTextViewStyle.ClientList.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:password="false"
                            android:text="@string/inactive"
                            android:textColor="@color/black"
                            android:textSize="22sp" />

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/inactive_description"
                            style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@string/notifications_off"
                            android:textColor="@color/client_list_grey"
                            android:textSize="22sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/losttofollowuplayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/lost_to_followup_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_checked" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/lost_to_followup"
                            style="@style/CustomFontTextViewStyle.ClientList.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:password="false"
                            android:text="@string/lost_to_follow_up"
                            android:textColor="@color/black"
                            android:textSize="22sp" />

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/lost_to_followup_description"
                            style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@string/notifications_off_child_cannot_be_located"
                            android:textColor="@color/client_list_grey"
                            android:textSize="22sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>
    </FrameLayout>

</FrameLayout>